--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Practica DataTables</title>
+    <title>DataTables</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <link rel="shortcut icon" href="/favicon.ico">
@@ -27,7 +27,7 @@
                 <div id="edicionok" class="alert alert-success" role="alert">Registro editado</div>
                 <div id="edicionerr" class="alert alert-danger" role="alert">Registro erronea</div>
 
-                <button id="creaDoc" type="button" class="btn btn-info navbar-btn">Nuevo doctor</button>
+                <button id="creaDoc" type="button" class="btn btn-info navbar-btn pull-right">Nuevo doctor</button>
 
                 <table id="miTabla" class="table stripe">
                     <thead>
@@ -35,7 +35,7 @@
                         <th>Numero de colegiado</th>
                         <th>Nombre clinica</th>
                         <th>Id clinica</th>
-                        <th>Edicion y Borrado</th>
+                        <th>Edicion</th>
                     </thead>
                     <tbody>
                     </tbody>
